Fixed overflow issue

--- a/Styles.css
+++ b/Styles.css
@@ -12,12 +12,11 @@ html{
         url('Images/texture2.jpg');
     background-size: cover;
     background-position: center;
-    height: 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: rgb(0, 50, 0);
     text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5), -1px -1px 5px rgba(255, 255, 255, 0.5);
-    height: 100vw;
+    height: 100vh;
     width: 100vw;
     overflow: hidden;
 }
@@ -575,7 +574,7 @@ footer{
     body{
         width: 90vw;
         height: 100vh;
-        overflow: hidden;
+        overflow: auto;
     }
     #timeline{
         height: 420px;
